[gd_scene load_steps=4 format=3 uid="uid://0orxfqfkrgsp"]

[ext_resource type="Texture2D" uid="uid://b3vlrvvva8w5n" path="res://world/props/rock.png" id="1_j5qoa"]
[ext_resource type="Script" uid="uid://bgwokh8d0tk0q" path="res://world/props/prop.gd" id="1_krm5x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_krm5x"]
size = Vector2(128, 64)

[node name="Rock" type="Node2D"]
script = ExtResource("1_krm5x")
metadata/_custom_type_script = "uid://bgwokh8d0tk0q"

[node name="PropSprite" type="Sprite2D" parent="."]
position = Vector2(0, -17)
texture = ExtResource("1_j5qoa")

[node name="VisArea" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 1536

[node name="AreaShape" type="CollisionShape2D" parent="VisArea"]
z_index = -1
position = Vector2(0, -17)
shape = SubResource("RectangleShape2D_krm5x")
debug_color = Color(0.949, 0.949, 0.949, 0.125)
